installed geolocator package

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
-# geocoding start
+# geocoding & geolocator start
 android.useAndroidX=true
 android.enableJetifier=true
-# geocoding end
+# geocoding & geolocator end
